welcome.lessons.welcome.methods.basics.MethodsDogHouse.scala.error
MethodsDogHouse:10: error: Unit does not take parameters
		dogHouse();
                        ^MethodsDogHouse:16: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:26: error: Unit does not take parameters
		dogHouse();		
                        ^MethodsDogHouse:36: error: Unit does not take parameters
		dogHouse();		
                        ^